@@ -38,7 +38,7 @@ static GstStaticPadTemplate gst_rtp_mpa_pay_sink_template =
 GST_STATIC_PAD_TEMPLATE ("sink",
     GST_PAD_SINK,
     GST_PAD_ALWAYS,
-    GST_STATIC_CAPS ("audio/mpeg")
+    GST_STATIC_CAPS ("audio/mpeg, " "mpegversion = (int) 1")
     );
 
 static GstStaticPadTemplate gst_rtp_mpa_pay_src_template =
